--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,12 +42,13 @@ jobs:
           fi
           go build -o dist/$BIN_NAME .
 
-#      - name: Upload build artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: binaries
-#          path: dist/*
-#          overwrite: true
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: binaries
+          path: dist/*
+          overwrite: true
+
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
