--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: binaries
+          name: blacklist3-${{ matrix.goos }}-${{ matrix.goarch }}
           path: dist/*
           overwrite: true
 
@@ -66,4 +66,4 @@ jobs:
         with:
           files: dist/*
           generate_release_notes: true
-          overwrite: true
+
