--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,8 +17,8 @@ jobs:
 
     strategy:
       matrix:
-        goos: [linux,freebsd,darwin]
-        goarch: [amd64]
+        goos: [linux,freebsd,darwin,windows]
+        goarch: [amd64,arm64]
 
     steps:
       - name: Checkout repository
