--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,8 +59,8 @@ jobs:
 
     strategy:
       matrix:
-        goos: [linux,freebsd,darwin]
-        goarch: [amd64]
+        goos: [linux,freebsd,darwin,windows]
+        goarch: [amd64,arm64]
 
     steps:
       - name: Download artifacts
