--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 sources:
-  - name: ip1
+  - name: ip
     type: url
     path: https://antifilter.network/download/ip.lst
-    
+
   - name: ipsum
     type: url
     path: https://antifilter.download/list/ipsum.lst
