--- a/bird/bird.conf
+++ b/bird/bird.conf
@@ -31,7 +31,7 @@ protocol bgp {
         neighbor 192.168.1.1 as 64516;
         hold time 240;
         next hop self;
-        #multihop;
+        multihop;
         source address 192.168.1.1;
         passive on;
         #allow bgp_local_pref on;
